[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/textures/advance2.png" type="Texture" id=1]
[ext_resource path="res://collectibles/collectible_level.gd" type="Script" id=2]
[ext_resource path="res://collectibles/pick_up_collectible.ogg" type="AudioStream" id=3]
[ext_resource path="res://areas/movement_test/Clouds_UV.png" type="Texture" id=4]
[ext_resource path="res://materials/bubble_2.shader" type="Shader" id=5]

[sub_resource type="SphereMesh" id=1]
radius = 0.2
height = 0.4
radial_segments = 16
rings = 8

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00340136, 1 )
colors = PoolColorArray( 1, 0.960784, 0, 1, 1, 0.960784, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 5 )
shader_param/fresnel_color = Color( 1, 1, 1, 0.509804 )
shader_param/amplifier = 12.0
shader_param/speed = 0.4
shader_param/distortion = 0.254
shader_param/texture_normal_scale = 1.0
shader_param/distortion_texture = ExtResource( 4 )
shader_param/vision_texture = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_texture = ExtResource( 1 )

[sub_resource type="QuadMesh" id=6]
material = SubResource( 5 )
size = Vector2( 0.035, 0.035 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.771084, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=8]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("OmniLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.28, 0.0 ]
}

[sub_resource type="Animation" id=9]
loop = true

[sub_resource type="SphereShape" id=10]
radius = 0.3

[node name="CollectibleLarge" type="Spatial"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
collect_sound = ExtResource( 3 )
large = true
volume_offset = 1.5

[node name="Model" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="IdleParticles" type="CPUParticles" parent="."]
mesh = SubResource( 6 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.5
radial_accel = -2.0
damping = 1.2
scale_amount = 3.0
scale_amount_random = 1.0
color_ramp = SubResource( 7 )

[node name="CollectParticles" type="CPUParticles" parent="."]
emitting = false
amount = 24
lifetime = 1.8
one_shot = true
explosiveness = 1.0
mesh = SubResource( 6 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.25
damping = 1.0
scale_amount = 3.0
scale_amount_random = 1.0
color_ramp = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spin"
playback_speed = 0.5
anims/Fade = SubResource( 8 )
anims/Spin = SubResource( 9 )

[node name="CollectArea" type="Area" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape" type="CollisionShape" parent="CollectArea"]
shape = SubResource( 10 )

[node name="OmniLight" type="OmniLight" parent="."]
light_energy = 2.28
omni_range = 0.7
omni_attenuation = 0.707107

[node name="TimerDestroy" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="CollectArea" to="." method="_on_CollectArea_body_entered"]
[connection signal="timeout" from="TimerDestroy" to="." method="queue_free"]
